src/component/tree/snapshots/envision__component__tree__snapshot_tests__snapshot_deep_nesting.snap
---
source: src/component/tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
▼ Level 1                               
  ▼ Level 2                             
    ▼ Level 3                           
        Leaf
