src/component/tree/snapshots/envision__component__tree__snapshot_tests__snapshot_disabled.snap
---
source: src/component/tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
▼ Root                                  
    Child 1                             
    Child 2
