src/component/tree/snapshots/envision__component__tree__snapshot_tests__snapshot_expanded_with_children.snap
---
source: src/component/tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
▼ Projects                              
    envision                            
    other
