src/component/tree/snapshots/envision__component__tree__snapshot_tests__snapshot_mixed_expanded_collapsed.snap
---
source: src/component/tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
▼ Documents                             
    readme.md                           
    guide.md                            
▶ Projects                              
  Downloads
