src/component/tree/snapshots/envision__component__tree__snapshot_tests__snapshot_single_root.snap
---
source: src/component/tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
  Documents
